[Core] Fixed bug unbounded address accessing; [GLFW] Adding GLFWNative; [STB] Adding STBPerlin